2007-10-15  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.[ch]:
	Add nautilus_file_get_icon_pixbuf and
	IGNORE_VISITING icon flag
	
        * libnautilus-private/nautilus-icon-info.[ch]:
        Add nautilus_icon_info_get_used_name function

        * libnautilus-private/nautilus-emblem-utils.c:
        * libnautilus-private/nautilus-program-choosing.c:
        * libnautilus-private/nautilus-ui-utilities.c:
        * src/nautilus-desktop-window.c:
        * src/nautilus-navigation-window.c:
        * src/nautilus-spatial-window.c:
        * src/nautilus-window.[ch]:
	Convert to new icon APIs

2007-10-15  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/Makefile.am:
        * libnautilus-private/nautilus-audio-player.c: Removed.
        * libnautilus-private/nautilus-audio-player.h: Removed.
        * src/file-manager/fm-icon-view.c:
	Kill old unused code

2007-10-15  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-info.[ch]:
	Add nautilus_icon_info_get_pixbuf_nodefault_at_size
	
        * libnautilus-private/nautilus-file.[ch]:
	New functions for getting emblem icons and emblem pixbufs
	
        * libnautilus-private/nautilus-icon-container.[ch]:
        * libnautilus-private/nautilus-icon-factory.c:
        * src/file-manager/fm-directory-view.[ch]:
        * src/file-manager/fm-icon-container.c:
        * src/file-manager/fm-list-model.c:
        * src/file-manager/fm-tree-model.c:
        * src/nautilus-sidebar-title.c:
	Update to use the new emblem getters

2007-10-15  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-info.[ch]:
	Add nautilus_get_icon_size_for_stock_size
	
        * libnautilus-private/nautilus-bookmark.c:
        * src/nautilus-places-sidebar.c:
        Use the above

2007-10-15  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-thumbnails.c: