@@ -1,5 +1,11 @@
 2007-10-15  Alexander Larsson  <alexl@redhat.com>
 
+        * src/nautilus-pathbar.c:
+        * src/nautilus-spatial-window.c:
+	Convert more stuff to new icon API
+
+2007-10-15  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file.[ch]:
 	Add nautilus_file_get_icon_pixbuf and
 	IGNORE_VISITING icon flag
